# dioxus-sandbox

./: Cargo.toml  Dioxus.toml  tailwind.config.js
src/: main.rs
src/components/: input.rs  mod.rs  story_listing.rs
src/modules/crawler/: crawler.md  crawler.rs  crawler_tests.rs  mod.rs
src/modules/store/: mod.rs  store.md  store.rs
