[package]
name = "dioxus-sandbox"
version = "0.1.0"
authors = ["mitchgibson <mdgibson28@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
dioxus = { version = "0.5", features = ["desktop"] }
web-sys = "0.3"

# Debug
dioxus-logger = "0.5.1"
futures = "0.3.31"
petgraph = "0.6.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
